--- a/main.html
+++ b/main.html
@@ -1,16 +1,86 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="row">
+        <div class="col">
+            <img src="./image/aj.jpg" alt="v" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="c" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="a" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="d" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="e" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="f" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="f" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="h" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="j" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="k" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="l" width="100px">
+        </div>
+        <div class="col">
+            <img src="./image/aj.jpg" alt="m" width="100px">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col1">
+            <img src="./image/aj.jpg" alt="n" width="200px">
+        </div>
+        <div class="col1">
+            <img src="./image/aj.jpg" alt="o" width="200px">
+        </div>
+        <div class="col1">
+            <img src="./image/aj.jpg" alt="p" width="200px">
+        </div>
+        <div class="col1">
+            <img src="./image/aj.jpg" alt="q" width="200px">
+        </div>
+        <div class="col1">
+            <img src="./image/aj.jpg" alt="r" width="200px">
+        </div>
+        <div class="col1">
+            <img src="./image/aj.jpg" alt="s" width="200px">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col2">
+            <img src="./image/aj.jpg" alt="t" width="400px">
+        </div>
+        <div class="col2">
+            <img src="./image/aj.jpg" alt="u" width="400px">
+        </div>
+        <div class="col2">
+            <img src="./image/aj.jpg" alt="w" width="400px">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col3">
+            <img src="./image/aj.jpg" alt="x">
+        </div>
+    </div>
 </body>
-
 </html>
