--- a/main.html
+++ b/main.html
@@ -1,86 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="row">
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="v" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="c" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="a" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="d" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="e" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="f" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="f" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="h" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="j" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="k" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="l" width="100px">
-        </div>
-        <div class="col">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="m" width="100px">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col1">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="n" width="200px">
-        </div>
-        <div class="col1">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="o" width="200px">
-        </div>
-        <div class="col1">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="p" width="200px">
-        </div>
-        <div class="col1">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="q" width="200px">
-        </div>
-        <div class="col1">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="r" width="200px">
-        </div>
-        <div class="col1">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="s" width="200px">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col2">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="t" width="400px">
-        </div>
-        <div class="col2">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="u" width="400px">
-        </div>
-        <div class="col2">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="w" width="400px">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col3">
-            <img src="http://127.0.0.1:5500/image/aj.jpg" alt="x">
-        </div>
-    </div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBTXu-8ZtIxQFKWTJxb76PgFP9MH5GhsS__9B8T3bCgdnmfRqyjCF6V7x62zSVWS_eZ7g&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+			<div class="col-sm-1">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+			</div>
+		</div>
+			<div class="row-2">
+				<div class="col-sm-2">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-2">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-2">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-2">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-2">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-2">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+			</div>
+			<div class="row-3">
+				<div class="col-sm-4">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-4">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+				<div class="col-sm-4">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+			</div>
+			<div class="row-4">
+				<div class="col-sm-12">
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIVbdxI1BL-w2W5FgDgBFtka6Nz4WykL51Ww&usqp=CAU" alt="twd">
+				</div>
+			</div>
+	</div>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
